# paradigms

./: .gitignore  Homework_5.txt  README.md  pyproject.toml
Homework_1/: Main.py
Homework_2/: Main.py
Homework_3/: Main.py  README.md  View.py
Homework_3/Controller/: GameController.py
Homework_3/Models/: Field.py  Gamer.py  History.py
Homework_4/: Main.py
Homework_6/: main.py
Lesson_1/: Main.py
Lesson_2/: Main.py
Lesson_3/: Main.py  Shape.py
Lesson_4/: Main.py
Lesson_6/: Main.py
